2009-05-01  Thomas Hinkle  <tom@grenville>

	* src/lib/recipeIdentifier.py (get_ingredient_hash): md5 ->
	hashlib (remove deprecated md5 lib)

	* src/lib/gtk_extras/thumbnail.py (check_for_thumbnail): md5 ->
	hashlib (remove deprecated md5 lib)

	* src/lib/backends/db.py : Fix unicode type errors from sqlalchemy.
	* src/lib/*: Change servings->yields

2009-03-27  Thomas Hinkle  <tom@grenville>

	* src/lib/exporters/exportManager.py (ExportManager.offer_multiple_export):
	Include any recipes linked to in your recipes in your export.

	* src/lib/backends/db.py (RecData.include_linked_recipes): Add
	convenience method to append linked recipes (from
	recipe-as-ingredient) to a list of recipes.

2009-03-26  Thomas Hinkle  <tom@grenville>

	* src/lib/gtk_extras/dialog_extras.py (saveas_file): If we can't
	guess our file type based on the extension, use whatever is
	selected in the filetype combo box as fallback.

	* src/lib/exporters/exportManager.py (ExportManager.offer_multiple_export):
	Show error message if we don't get an export type.

	* src/lib/backends/db.py (RecData.get_amount_and_unit): Don't
	require conv argument to be passed (switching to singleton design
	pattern...)

2009-03-26  Artis Rozentāls  <artis.rozentals@gmail.com>

	* src/lib/plugins/nutritional_information/nutrition.py (NutritionData.set_key_from_ndbno):
	Fix association editing.

2009-03-24  Thomas Hinkle  <tom@grenville>

	* src/lib/plugins/import_export/html_plugin/html_exporter_plugin.py (HtmlExporterPlugin.get_multiple_exporter):
	Eliminate obsolete arguments (progress_func is no longer needed
	with our new signal interface and converters are now gotten using
	a singleton design pattern.

2009-03-14  Thomas Hinkle  <tom@grenville>

	* src/lib/plugin_gui.py (PluginChooser.do_change_plugin): Display
	error to user when loading a plugin fails. Give suggestions as to
	how to install dependencies in case of import error.

	* src/lib/plugin_loader.py (MasterLoader): Remove key_editor from